<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--    Background-->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />
<!--    Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:scaleType="centerInside"
        android:src="@drawable/logoayana" />
<!--    Judul-->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsbold"/>
<!--    Username-->
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Rectangle"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/usrnm"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#FFFFFF"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="9dp"/>
<!--    Email-->
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Rectangle"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/mail"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#FFFFFF"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="9dp"/>
<!--    Password-->
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Rectangle"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/pw"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#FFFFFF"
        android:drawableLeft="@drawable/baseline_lock_open_24"
        android:drawablePadding="9dp"/>
<!--    Remember-->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:buttonTint="#FFFFFF"
        android:layout_below="@id/password"
        android:layout_marginLeft="73dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="6dp">
    </com.google.android.material.checkbox.MaterialCheckBox>
<!--    Forgot-->
    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:layout_below="@id/password"
        android:layout_marginTop="18dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="285dp"/>
<!--    Button-->
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/materialCheckbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/log"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#FFFFFF"
        android:background="@drawable/shapeButton"/>
<!--Teks akhir-->
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginTop="12dp"
        android:text="@string/akhir"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/poppinsmedium"/>
</RelativeLayout>

